Sun Dec 21 13:17:05 CET 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc.c: fixed #129327 make sure parser flags get transmitted to
	  the transformation context
	* libxslt/documents.c libxslt/transform.c libxslt/xsltInternals.h 
	  libxslt/xsltutils.c libxslt/xsltutils.h: add a new call
	  xsltSetCtxtParseOptions() to update parsing options in document()

Sun Dec 21 12:51:12 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/keys.c: fixed second problem on #122483, namespace
	  definitions must be propagated to keys.
	* tests/docs/Makefile.am tests/docs/bug-137.xml
	  tests/general/Makefile.am tests/docs/bug-137*: added test
	  to the regression for bug #122483
	
Sun Dec 21 12:08:45 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: added the cast needed to fix #129188 warning

Sat Dec 20 23:37:31 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libexslt/transform.c: fixed Bug 129624 (erroneous output
	  of namespaces)

Sat Dec 20 16:22:11 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: fixed several routines to assure empty
	  string returned (rather than a string object with a null
	  string pointer) (Bug 129561)

Mon Dec 16 00:30:47 PST 2003 William Brack <wbrack@mmm.com.hk>

	* doc/Makefile.am doc/site.xsl doc/api.xsl doc/newapi.xsl
	  doc/xslt.html doc/apibuild.py doc/EXSLT doc/EXSLT/exslt.html:
	  enhanced documentation to include exslt; rebuilt docs
	  
Mon Dec 15 20:33:52 MST 2003 John Fleck <jfleck@inkstain.net>

	* libxslt/xsltutils.h
	* doc/*
	document XSLT_TRACE macro (sort of) and rebuild docs

Thu Dec 11 19:50:41 CET 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* win32/Makefile.mingw win32/configure.js: tried to fix mingw
	  build, no success, it still works halfway.

Thu Dec 11 16:33:41 CET 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* win32/Makefile.* win32/configure.js libxslt/xsltexports.h
	  libexslt/exsltexports.h libxslt/win32config.h: msvc and
	  mingw compilation fixes.
